fixed a couple of bugs with url reading capabilities